[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/ui/profile_selector/ProfileSelector.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/ui/master_control/SketchManager.gd" type="Script" id=2]
[ext_resource path="res://src/utilities/controllable_camera/ControllableCamera.gd" type="Script" id=3]
[ext_resource path="res://src/ui/master_control/Master.gd" type="Script" id=6]
[ext_resource path="res://src/ui/master_control/World.gd" type="Script" id=7]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0941176, 0.0941176, 0.0941176, 1 )

[node name="Master" type="Node"]
script = ExtResource( 6 )

[node name="SketchManager" type="Node" parent="."]
script = ExtResource( 2 )

[node name="World" type="Node" parent="."]
script = ExtResource( 7 )

[node name="Camera" type="Camera" parent="World"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 10, 10 )
near = 0.01
far = 400.0
script = ExtResource( 3 )

[node name="HUD" type="Node" parent="."]

[node name="ScreenCover" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 640, 360 )
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProfileSelect" parent="." instance=ExtResource( 1 )]
rect_pivot_offset = Vector2( 640, 360 )
